--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ edition = "2018"
 ndarray = { version = "0.13.0", features = ["blas"] }
 ndarray-linalg = { version = "0.12", features = ["openblas"] }
 lapack-src = { version = "0.6", features = ["openblas"] }
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
+path="./benches/my-benchmark.rs"
