--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rusty_rudolf"
 version = "0.1.0"
 authors = ["Vanio Begic <vanio.begic123@gmail.com>"]
+description = "Algorithms for filtering problem"
+license = "MIT"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
