--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 ndarray = { version = "0.13.0", features = ["blas"] }
 ndarray-linalg = { version = "0.12", features = ["openblas"] }
 lapack-src = { version = "0.6", features = ["openblas"] }
-
+cauchy = "0.2.2"
 [dev-dependencies]
 criterion = "0.3"
 
