--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2018"
 [dependencies]
 ndarray = { version = "0.13.0", features = ["blas"] }
 ndarray-linalg = { version = "0.12", features = ["openblas"] }
-lapack-src = { version = "0.6", features = ["openblas"] }
+blas-src = { version = "0.7.0", default-features = false, features = ["openblas"] }
+openblas-src = { version = "0.9", default-features = false, features = ["cblas", "static"] }
 cauchy = "0.2.2"
 #mimalloc = { version = "0.1.17", default-features = false }
 [dev-dependencies]
@@ -23,5 +24,4 @@ harness = false
 path="./benches/my-benchmark.rs"
 
 [profile.release]
-lto = "fat"
-codegen-units = 1
+debug = true
