Intermediate commit towards dimension-safe operations via wrappers for ndarray.
In this commit some basic wrappers are made available for executing operations
on ndarrays. The goal of these wrappers is to ensure that if correct-dimensional
states, measurements and configuration matrices are passed in, then any operation
is guaranteed to suceed.

Maybe a push towards further safety, such as positive-definiteness and symmetric
matrices will be done if necessary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ndarray-linalg = { version = "0.12", features = ["openblas"] }
 blas-src = { version = "0.7.0", default-features = false, features = ["openblas"] }
 openblas-src = { version = "0.9", default-features = false, features = ["cblas", "static"] }
 cauchy = "0.2.2"
+nalgebra = "0.24.1"
 #mimalloc = { version = "0.1.17", default-features = false }
 [dev-dependencies]
 criterion = "0.3"
